Doesn't allow conceal in insert mode

--- a/.vimrc.local.latex
+++ b/.vimrc.local.latex
@@ -3,3 +3,6 @@ nnoremap <F3> :Shell! latex-mk --pdflatex %<CR>
 
 " for latex environment around existing text with surround
 let g:surround_108 = "\\begin{\1environment: \1}\r\\end{\1\1}"
+
+" for not using conceal in insert mode
+set concealcursor=
