Some changes for the various used plugins

--- a/.vimrc.local.latex
+++ b/.vimrc.local.latex
@@ -6,3 +6,13 @@ let g:surround_108 = "\\begin{\1environment: \1}\r\\end{\1\1}"
 
 " for not using conceal in insert mode
 set concealcursor=
+
+" for completion of bibtex
+let g:ycm_semantic_triggers = {
+\  'tex'  : ['\ref{','\cite{'],
+\ }
+
+" for filetype of tex
+let g:tex_flavor='latex'
+
+" vim: set ft=vim
